--- a/programs/solana_nft_minting/Cargo.toml
+++ b/programs/solana_nft_minting/Cargo.toml
@@ -15,5 +15,5 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.29.0"
-anchor-spl = "0.29.0"
+anchor-lang = { version = "0.29.0", features = ["init-if-needed"]}
+anchor-spl = { version = "0.29.0", features = ["associated_token"] }
