--- a/programs/solana_swap/Cargo.toml
+++ b/programs/solana_swap/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anchor-lang = "0.29.0"
-anchor-spl = "0.29.0"
+anchor-lang = { version = "0.29.0", features = ["init-if-needed"]}
+anchor-spl = { version = "0.29.0", features = ["associated_token"] }
 
 [lib]
 crate-type = ["cdylib", "lib"]
