--- a/programs/solana_swap/Cargo.toml
+++ b/programs/solana_swap/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anchor-lang = { version = "0.29.0", features = ["init-if-needed"]}
 anchor-spl = { version = "0.29.0", features = ["associated_token"] }
+solana_vault = { path = "../solana_vault", features = ["cpi"] }
 
 [lib]
 crate-type = ["cdylib", "lib"]
