--- a/programs/solana_vault/Cargo.toml
+++ b/programs/solana_vault/Cargo.toml
@@ -9,3 +9,6 @@ anchor-spl = { version = "0.29.0", features = ["associated_token"] }
 
 [lib]
 crate-type = ["cdylib", "lib"]
+
+[features]
+cpi = []
