--- a/Anchor.toml
+++ b/Anchor.toml
@@ -13,7 +13,7 @@ solana_vault = "EZSkMDXfzCmy4n7sJoesYCoacANCcJvit5R5QDJ9m5rT"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
