--- a/programs/solana_swap/Cargo.toml
+++ b/programs/solana_swap/Cargo.toml
@@ -4,9 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anchor-lang = { version = "0.29.0", features = ["init-if-needed"]}
+anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
 anchor-spl = { version = "0.29.0", features = ["associated_token"] }
 solana_vault = { path = "../solana_vault", features = ["cpi"] }
 
 [lib]
 crate-type = ["cdylib", "lib"]
+name = "solana_swap"
+
+[features]
+no-entrypoint = []
+no-idl = []
+no-log-ix-name = []
+cpi = ["no-entrypoint"]
+default = []
