--- a/programs/solana_vault/Cargo.toml
+++ b/programs/solana_vault/Cargo.toml
@@ -4,11 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anchor-lang = { version = "0.29.0", features = ["init-if-needed"]}
+anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
 anchor-spl = { version = "0.29.0", features = ["associated_token"] }
 
 [lib]
 crate-type = ["cdylib", "lib"]
 
 [features]
-cpi = []
+no-entrypoint = []
+no-idl = []
+no-log-ix-name = []
+cpi = ["no-entrypoint"]
+default = []
